err/sxrobot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sxrobot'...
Compiling './lib/python3.5/site-packages/sxrobot/test.py'...
***   File "./lib/python3.5/site-packages/sxrobot/test.py", line 22
    print 'tuling_key:', self.tuling_key
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sxrobot/webserver.py'...
***   File "./lib/python3.5/site-packages/sxrobot/webserver.py", line 85
    print 'Started httpserver on port ' , PORT_NUMBER
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sxrobot/wxbot.py'...
***   File "./lib/python3.5/site-packages/sxrobot/wxbot.py", line 59
    print e.message, traceback.format_exc()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sxrobot-1.0.0.dev1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
